[package]
name = "smolmesh2"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
bytes = "1.10.1"
crossbeam = "0.8.4"
json = "0.12.4"
lazy_static = "1.5.0"
chrono = "0.4.41"
libc = "0.2.174"
libloading = "0.8.8"

[dependencies.nix]
version = "0.30.1"
features = ["net", "poll", "event"]

[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
]
